# rust-practices

./: README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
collections/array/: Cargo.toml
collections/array/src/: main.rs
collections/hashmaps/: Cargo.toml
collections/hashmaps/src/: main.rs
collections/iterators/: Cargo.toml
collections/slices/: Cargo.toml
collections/tuples/: Cargo.toml
collections/tuples/src/: main.rs
collections/vectors/: Cargo.toml
collections/vectors/src/: main.rs
condition_and_decision/: Cargo.toml
condition_and_decision/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
exercises/word_counter/: Cargo.toml  test.txt
exercises/word_counter/src/: main.rs
impl_blocks_for_enums/: Cargo.toml
impl_blocks_for_enums/src/: main.rs
impl_blocks_on_structs/: Cargo.toml
impl_blocks_on_structs/src/: main.rs
loops/: Cargo.toml
loops/src/: main.rs
match_expressions/: Cargo.toml
match_expressions/src/: main.rs
modules_imports_use_statement/: Cargo.toml
modules_imports_use_statement/src/: bar.rs  main.rs
modules_imports_use_statement/src/foo/: foo.rs
myxponent/: Cargo.toml
myxponent/examples/: basic.rs
myxponent/src/: lib.rs
rest-api/: Cargo.toml
rest-api/src/: like.rs  main.rs  tweet.rs
start/: Cargo.toml
start/src/: clusers.rs  main.rs
strings/: Cargo.toml
strings/src/: main.rs
user_defined_types/: Cargo.toml
user_defined_types/src/: main.rs
