[package]
name = "rest-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2.0"
actix-rt = "1"
actix-web = "3.3.2"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
serde = "1.0.106"
uuid = { version = "0.6", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
